--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
        <meta-data android:name="com.google.android.geo.API_KEY"
-           android:value="AIzaSyAo7X0-kEIl3B56rJ0-JtU2NqFFAez2_Hg"/>
+           android:value="Your Api key"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
