--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   bloc_concurrency: ^0.2.0
   bloc: ^8.1.0
   intl: ^0.17.0
+  retrofit: ^3.0.1+1
+  built_value: ^8.4.1
+  dio: ^4.0.6
+  json_annotation: ^4.6.0
+
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +63,10 @@ dev_dependencies:
   bloc_test: ^9.1.0
   mocktail: ^0.3.0
   very_good_analysis: ^3.0.2
+  build_runner: ^2.2.1
+  retrofit_generator: ^4.0.3+2
+  built_value_generator: ^8.4.1
+  json_serializable: ^6.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
